assets/css/styles.css
/* ... */
.contact__input{
  width: 100%;
  background-color: var(--input-color);
  color: var(--text-color);
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  border: none;
  padding: .25rem .5rem .5rem 0;
}

/*==================== FOOTER ====================*/
.footer{
  padding-top: 2rem;
}

.footer__container{
  row-gap: 3.5rem;
}

.footer__bg{
  background-color: var(--first-color-second);
  padding: 2rem 0 3rem;
}

.footer__title{
  font-size: var(--h1-font-size);
  margin-bottom: var(--mb-0-25);
}

.footer__subtitle{
  font-size: var(--small-font-size);
}

.footer__links{
  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;
}

.footer__link:hover{
  color: var(--first-color-lighter);
}

.footer__social{
  font-size: 1.25rem;
  margin-right: var(--mb-1-5);
}

.footer__social:hover{
  color: var(--first-color-lighter)
}

.footer__copy{
  font-size: var(--smaller-font-size);
  text-align: center;
  color: var(--text-color-light);
  margin-top: var(--mb-3);
}

.footer__title,
.footer__subtitle,
.footer__link,
.footer__social{
  color: #fff;
}

/*========== SCROLL UP ==========*/
.scrollup{
  position: fixed;
  right: 1rem;
  bottom: -20%;
  background-color: var(--first-color);
  opacity: .8;
  padding: 0 .3rem;
  border-radius: .4rem;
  z-index: var(--z-tooltip);
  transition: .4s;
}

.scrollup__icon{
  background-color: var(--first-color-alt);
}

.scrollup__icon{
  font-size: 1.5rem;
  color: #fff;
}
/* Show scroll */
.show-scroll{
  bottom: 5rem;
}


/*========== SCROLL BAR ==========*/
::-webkit-scrollbar{
  width: .60rem;
  background-color: var(--scroll-bar-color);
  border-radius: .5rem;
}

::-webkit-scrollbar-thumb{
  background-color: var(--scroll-thumb-color);
  border-radius: .5rem;
}

::-webkit-scrollbar-thumb:hover{
  background-color: var(--text-color-light);
}

/*==================== MEDIA QUERIES ====================*/
/* For small devices */
@media screen and (max-width: 350px){
  .container{
    margin-left: var(--mb-1);
    margin-right: var(--mb-1);
  }

  .nav__menu{
    padding: 2rem .25rem 4rem;
  }
  .nav__list{
    column-gap: 0;
  }

  .home__content{
    grid-template-columns: .25fr 3fr;
  }
  .home__bold{
    width: 180px;
  }

  .skills__title{
    font-size: var(--normal-font-size);
  }

  .qualification__data{
    gap: .5rem;
  }

  .services__container{
    grid-template-columns: max-content;
    justify-content: center;
  }
  .services_content{
    padding-right: 3.5rem;
  }
  .services__modal{
    padding: 0 .5rem;
  }

  .project_img{
    width: 200px;
  }

  .testimonial__data,
  .testimonial__header{
    flex-direction: column;
    align-items: center;
  }
  .testimonial__img{
    margin-right: 0;
    margin-bottom: var(--mb-0-25);
  }
  .testimonial__data,
  .testimonial__description{
    text-align: center;
  }
}

/* For medium devices */
@media screen and (min-width: 568px){
  .home__content{
    grid-template-columns: max-content 1fr 1fr;
  }
  .home__data{
    grid-column: initial;
  }
  .home__img{
    order: 1;
    justify-self: center;
  }

  .about__container,
  .skills__container,
  .portfolio__content,
  .project__container,
  .contact__container,
  .footer__container{
    grid-template-columns: repeat(2, 1fr);
  }

  .qualification__sections{
    display: grid;
    grid-template-columns: .6fr;
    justify-content: center;
  }
}

@media screen and (min-width: 768px){
  .container{
    margin-left: auto;
    margin-right: auto;
  }

  body{
    margin: 0;
  }

  .section{
    padding: 6rem 0 2rem;
  }
  .section__subtitle{
    margin-bottom: 4rem;
  }

  .header{
    top: 0;
    bottom: initial;
  }

  .header,
  .main,
  .footer__container{
    padding: 0 1rem;
  }

  .nav{
    height: calc(var(--header-height) + 1.5rem);
    column-gap: 1rem;
  }
  .nav__icon,
  .nav__close,
  .nav__toggle{
    display: none;
  }
  .nav__list{
    display: flex;
    column-gap: 2rem;
  }
  .nav__menu{
    margin-left: auto;
  }
  .change-theme{
    margin: 0;
  }

  .home__container{
    row-gap: 5rem;
  }
  .home__content{
    padding-top: 5.5rem;
    column-gap: 2rem;
  }
  .home__blob{
    width: 270px;
  }
  .home__scroll{
    display: block;
  }
  .home__scroll-button{
    margin-left: 3rem;
  }

  .about__container{
    column-gap: 5rem;
  }
  .about__img{
    width: 250px;
  }
  .about__description{
    text-align: initial;
  }
  .about__info{
    justify-content: space-between;
  }
  .about__buttons{
    justify-content: initial;
  }

  .qualification__tabs{
    justify-content: center;
  }
  .qualification__button{
    margin: 0 var(--mb-1);
  }
  .qualification__sections{
    grid-template-columns: 5fr;
  }

  .services__container{
    grid-template-columns: repeat(3, 218px);
    justify-content: center;
  }
  .services__icon{
    font-size: 2rem;
  }
  .services_content{
    padding: 6rem 0 2rem 2.5rem;
  }
  .services__modal-content{
    width: 450px;
  }

  .portfolio__img{
    width: 320px;
  }
  .portfolio__content{
    align-items: center;
  }

  .project{
    text-align: initial;
  }
  .project__bg{
    background: none;
  }
  .project__container{
    background-color: var(--first-color-second);
    border-radius: 1rem;
    padding: 3rem 2.5rem 0;
    grid-template-columns: 1fr max-content;
    column-gap: 3rem;
  }
  .project__data{
    padding-top: .8rem;
  }

  .footer__container{
    grid-template-columns: repeat(3, 1fr);
  }
  .footer__bg{
    padding: 3rem 0 3.5rem;
  }
  .footer__links{
    flex-direction: row;
    column-gap: 2rem;
  }
  .footer__socials{
    justify-self: flex-end;
  }
  .footer__copy{
    margin-top: 4.5rem;
  }
}
/* ... */

